2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.[ch]:
        * client/gdaemonvfs.c:
        * daemon/mount.c:
	Add user_visible to mount info
	Reorder args so that new stuff comes at the end
	
        * daemon/gvfsbackend.[ch]:
	Add user_visible setting
	Fix up various setters that set the wrong variable
	
        * daemon/gvfsbackendtrash.c:
	Add icon and better display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]:
        * client/gdaemonvolume.c:
        * client/gdaemonvolumemonitor.[ch]:
	Implement using DEFINE_DYNAMIC_TYPE
	Actually register GDaemonVolumeMonitor in giomodule
	
        * common/gmounttracker.c:
	Update to the on-dbus format for mounts

2007-10-19  Alexander Larsson  <alexl@redhat.com>

	* client/smburi.c (smb_to_uri):
	No port by default

2007-10-16  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_get_parent):
	Fix get_parent to handle files that are in the root directory

2007-10-16  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.[ch]:
	Make sending icons actually work
	
        * daemon/gvfsbackendtrash.c:
	Set icon for toplevel
	
        * daemon/gvfsmonitor.c:
        Initialize error before call

2007-10-12  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Build fixes
	Patch from Milosz Derezynski <internalerror@gmail.com>

2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Support file monitor on trash:/// (for icon)

2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Add support for directory monitor on root dir

2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Correctly handle len arg in unescape_pathname
	
2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Nicer filenames for things in the home trash.